# improved-pngquant

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  interface.h  pngquant.c  pom.xml  rwpng.c  rwpng.h
src/: Pngquant.java  TestMain.java
src/main/java/: Pngquant.java
src/main/java/com/s24/image/improved/pngquant/: Pngquant.java
src/main/resources/: libpngquant.dylib
src/test/java/: PngquantTest.java
src/test/java/com/s24/image/improved/pngquant/: PngquantTest.java
